WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
4104
first-letter not updating style with hover
https://bugs.webkit.org/show_bug.cgi?id=4104
Summary
first-letter not updating style with hover
Beth Dakin
Reported
2005-07-21 15:18:35 PDT
* SUMMARY Most of the refreshing issues with first-letter seem to have been resolved. However, the CSS element hover just requires a repaint, and therefore the function updateFirstLetter() in render_block.cpp is not called, leaving the first-letter without the hover style. * STEPS TO REPRODUCE See attached test case. * RESULTS In the attached case, we expect the entire line to turn green when we hover over it. But instead, everything but the first-letter turns green.
Attachments
first-letter with hover test case
(351 bytes, text/html)
2005-07-21 15:19 PDT
,
Beth Dakin
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2005-07-21 15:19:56 PDT
Created
attachment 3052
[details]
first-letter with hover test case * SUMMARY Most of the refreshing issues with first-letter seem to have been resolved. However, the CSS element hover just requires a repaint, and therefore the function updateFirstLetter() in render_block.cpp is not called, leaving the first-letter without the hover style. * STEPS TO REPRODUCE See attached test case. * RESULTS In the attached case, we expect the entire line to turn green when we hover over it. But instead, everything but the first-letter turns green.
Mark Rowe (bdash)
Comment 2
2005-07-29 22:13:00 PDT
Confirmed with ToT.
Christopher Jerome
Comment 3
2005-12-30 12:29:37 PST
Yes, It is still the same as of today (31/12/05)
Darin Adler
Comment 4
2007-05-10 08:57:50 PDT
<
rdar://problem/4189212
>
Sam Weinig
Comment 5
2007-05-24 18:53:26 PDT
Fixed in
r21742
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug