LayoutTests:

Reviewed by Hyatt.

        Test cases for:
        http://bugs.webkit.org/show_bug.cgi?id=4104
        first-letter not updating style with hover
        http://bugs.webkit.org/show_bug.cgi?id=13169
        css-formatted first letter won't hide dynamically

        * fast/css/first-letter-hover-expected.checksum: Added.
        * fast/css/first-letter-hover-expected.png: Added.
        * fast/css/first-letter-hover-expected.txt: Added.
        * fast/css/first-letter-hover.html: Added.
        * fast/css/first-letter-visibility-expected.checksum: Added.
        * fast/css/first-letter-visibility-expected.png: Added.
        * fast/css/first-letter-visibility-expected.txt: Added.
        * fast/css/first-letter-visibility.html: Added.

WebCore:

        Reviewed by Hyatt.

        http://bugs.webkit.org/show_bug.cgi?id=4104
        first-letter not updating style with hover
        http://bugs.webkit.org/show_bug.cgi?id=13169
        css-formatted first letter won't hide dynamically

        Update first letter when RenderBlock::setStyle is called.

        * css/cssstyleselector.cpp:
        (WebCore::CSSStyleSelector::checkOneSelector):
        * dom/Document.cpp:
        (WebCore::Document::Document):
        (WebCore::Document::createElement):
        * dom/Document.h:
        (WebCore::Document::usesFirstLetterRules):
        (WebCore::Document::setUsesFirstLetterRules):
        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::setStyle):
        (WebCore::RenderBlock::updateFirstLetter):



Canonical link: https://commits.webkit.org/18148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21742 268f45cc-cd09-0410-ab3c-d52691b4dbfc