WebCore/rendering/RenderBlock.cpp
@@ -150,6 +150,7 @@ void RenderBlock::setStyle(RenderStyle* _style)
         updateBeforeAfterContent(RenderStyle::BEFORE);
         updateBeforeAfterContent(RenderStyle::AFTER);
     }
+    updateFirstLetter();
 }
 
 void RenderBlock::addChildToFlow(RenderObject* newChild, RenderObject* beforeChild)
@@ -4042,7 +4043,13 @@ RenderBlock* RenderBlock::firstLineBlock() const
 }
 
 void RenderBlock::updateFirstLetter()
-{    
+{
+    if (!document()->usesFirstLetterRules())
+        return;
+    // Don't recurse
+    if (style()->styleType() == RenderStyle::FIRST_LETTER)
+        return;
+
     // FIXME: We need to destroy the first-letter object if it is no longer the first child.  Need to find
     // an efficient way to check for that situation though before implementing anything.
     RenderObject* firstLetterBlock = this;
